# form-app-scraping

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: create.sh  devcontainer.json
selenium_sample/: main.py
tests/: test_main.py
