[tool.poetry]
name = "selenium-sample"
version = "0.1.0"
description = ""
authors = ["tokiukaze <hal@tokiukaze.com>"]
readme = "README.md"
packages = [{include = "selenium_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

disallow_untyped_calls=false